--- a/pdv.html
+++ b/pdv.html
@@ -203,9 +203,13 @@ body {
     flex-direction: column;
     box-shadow: var(--shadow);
     position: relative;
+    /* Touch */
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
 }
 .pcard:hover { border-color: var(--primary); box-shadow: var(--shadow-md); transform: translateY(-2px); }
-.pcard:active { transform: translateY(0); }
+.pcard:active { transform: translateY(0); background: var(--primary-faint); }
 .pcard.esgotado { opacity: 0.45; cursor: not-allowed; }
 
 .pcard-img {
@@ -221,8 +225,13 @@ body {
     width: 100%; height: 100%;
     display: flex; align-items: center; justify-content: center;
     background: linear-gradient(135deg, var(--bg-panel), var(--primary-faint));
+    overflow: hidden;
 }
-.pcard-img-fake img { width: 55%; height: 55%; object-fit: contain; opacity: 0.45; }
+.pcard-img-fake img {
+    width: 100%; height: 100%;
+    object-fit: cover;
+    opacity: 0.35;
+}
 
 .pcard-destaque {
     position: absolute; top: 6px; left: 6px;
@@ -351,25 +360,35 @@ body {
 .item-nome { font-size: 12px; font-weight: 600; color: var(--text-main); line-height: 1.3; word-break: break-word; }
 .item-sku  { font-family: var(--font-title); font-size: 9px; color: var(--text-faint); margin-top: 2px; }
 .item-origem { font-size: 9px; color: var(--text-faint); margin-top: 1px; letter-spacing: 0.5px; }
-.qtd-ctrl { display: flex; align-items: center; gap: 5px; margin-top: 6px; }
+.qtd-ctrl { display: flex; align-items: center; gap: 6px; margin-top: 6px; }
 .btn-qtd {
-    width: 22px; height: 22px; border-radius: 6px;
-    border: 1px solid var(--border); background: var(--bg-input);
-    color: var(--primary-dark); font-size: 14px; font-weight: 700;
+    width: 44px; height: 44px; border-radius: 10px;
+    border: 1.5px solid var(--border); background: var(--bg-input);
+    color: var(--primary-dark); font-size: 20px; font-weight: 700;
     cursor: pointer; display: flex; align-items: center; justify-content: center;
     transition: all 0.1s; line-height: 1;
+    /* Touch-friendly — sem zoom no iOS */
+    touch-action: manipulation; -webkit-tap-highlight-color: transparent;
 }
-.btn-qtd:hover { border-color: var(--primary); background: var(--primary-faint); }
-.qtd-num { font-family: var(--font-title); font-size: 13px; font-weight: 700; min-width: 22px; text-align: center; }
-.item-right { text-align: right; flex-shrink: 0; }
+.btn-qtd:hover, .btn-qtd:active { border-color: var(--primary); background: var(--primary-faint); }
+.qtd-num { font-family: var(--font-title); font-size: 16px; font-weight: 700; min-width: 28px; text-align: center; }
+.item-right { text-align: right; flex-shrink: 0; display: flex; flex-direction: column; align-items: flex-end; }
 .item-unit  { font-size: 10px; color: var(--text-faint); font-family: var(--font-title); }
-.item-total { font-family: var(--font-title); font-size: 14px; font-weight: 700; color: var(--primary-dark); }
+.item-total { font-family: var(--font-title); font-size: 15px; font-weight: 700; color: var(--primary-dark); }
 .btn-del {
-    display: block; margin-top: 6px; margin-left: auto;
-    background: none; border: none; cursor: pointer;
-    color: var(--text-faint); padding: 2px; transition: color 0.1s;
+    display: flex; align-items: center; justify-content: center;
+    width: 44px; height: 44px;
+    margin-top: 4px;
+    background: rgba(192,57,43,0.06);
+    border: 1.5px solid rgba(192,57,43,0.2);
+    border-radius: 10px;
+    cursor: pointer;
+    color: var(--red);
+    transition: all 0.1s;
+    touch-action: manipulation; -webkit-tap-highlight-color: transparent;
 }
-.btn-del:hover { color: var(--red); }
+.btn-del:hover, .btn-del:active { background: rgba(192,57,43,0.14); border-color: rgba(192,57,43,0.4); }
+.btn-del svg { width: 18px; height: 18px; }
 
 .totais-box {
     border-top: 1px solid var(--border);
@@ -550,18 +569,20 @@ body {
 }
 .pag-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 12px; }
 .pag-opt {
-    padding: 11px 8px; border-radius: 10px;
+    padding: 14px 8px; border-radius: 10px;
     border: 1px solid var(--border); background: var(--bg-input);
     cursor: pointer; display: flex; flex-direction: column;
-    align-items: center; gap: 5px; transition: all 0.15s;
+    align-items: center; gap: 6px; transition: all 0.15s;
+    touch-action: manipulation; -webkit-tap-highlight-color: transparent;
+    min-height: 72px; justify-content: center;
 }
 .pag-opt-icon {
-    width: 30px; height: 30px; border-radius: 50%;
+    width: 38px; height: 38px; border-radius: 50%;
     background: var(--primary-faint);
     display: flex; align-items: center; justify-content: center;
     transition: all 0.15s;
 }
-.pag-opt-icon svg { color: var(--primary-dark); transition: color 0.15s; }
+.pag-opt-icon svg { color: var(--primary-dark); width: 18px; height: 18px; transition: color 0.15s; }
 .pag-opt-lbl { font-family: var(--font-title); font-size: 10px; font-weight: 700; letter-spacing: 0.5px; color: var(--text-muted); transition: color 0.15s; }
 .pag-opt.active { border-color: var(--primary); background: var(--primary-faint); }
 .pag-opt.active .pag-opt-icon { background: var(--primary-dark); }
@@ -589,26 +610,28 @@ body {
 
 .modal-footer { display: flex; gap: 8px; padding: 0 20px 16px; }
 .btn-m-cancel {
-    flex: 1; padding: 11px; border-radius: 8px;
+    flex: 1; padding: 15px; border-radius: 8px;
     border: 1px solid var(--border); background: transparent;
     color: var(--text-muted); font-family: var(--font-body);
     font-size: 13px; cursor: pointer; transition: background 0.15s;
+    touch-action: manipulation;
 }
 .btn-m-cancel:hover { background: var(--bg-panel); }
 .btn-m-print {
-    flex: 1; padding: 11px; border-radius: 8px;
+    flex: 1; padding: 15px; border-radius: 8px;
     border: 1px solid var(--border-md); background: transparent;
     color: var(--primary-dark); font-family: var(--font-title);
     font-size: 10px; font-weight: 700; letter-spacing: 1px;
-    cursor: pointer; transition: all 0.15s;
+    cursor: pointer; transition: all 0.15s; touch-action: manipulation;
 }
 .btn-m-print:hover { background: var(--primary-faint); }
 .btn-m-confirm {
-    flex: 2; padding: 11px; border-radius: 8px; border: none;
+    flex: 2; padding: 15px; border-radius: 8px; border: none;
     background: linear-gradient(135deg, var(--green), var(--green-light));
     color: #fff; font-family: var(--font-title);
     font-size: 10px; font-weight: 700; letter-spacing: 2px; text-transform: uppercase;
     cursor: pointer; box-shadow: 0 2px 8px rgba(46,125,50,0.22); transition: all 0.15s;
+    touch-action: manipulation;
 }
 .btn-m-confirm:hover { box-shadow: 0 4px 14px rgba(46,125,50,0.32); }
 .btn-m-confirm:disabled { background: var(--bg-panel); color: var(--text-faint); box-shadow: none; cursor: not-allowed; }
@@ -638,22 +661,33 @@ body {
 .spin { width: 28px; height: 28px; border: 2px solid var(--border); border-top-color: var(--primary); border-radius: 50%; animation: spin 0.8s linear infinite; }
 @keyframes spin { to { transform: rotate(360deg); } }
 
-/* ── CUPOM PRINT ── */
+/* ── CUPOM IMPRESSÃO (impressora térmica 80mm) ── */
 @media print {
+    @page {
+        size: 80mm auto;          /* largura 80mm, altura automática */
+        margin: 0;
+    }
     body > *:not(#cupom-print) { display: none !important; }
     #cupom-print { display: block !important; }
 }
 #cupom-print {
     display: none;
-    font-family: 'Courier New', monospace; font-size: 12px;
-    max-width: 280px; margin: 0 auto; padding: 10px;
-    color: #000; background: #fff;
+    font-family: 'Courier New', monospace;
+    font-size: 11px;
+    width: 72mm;          /* 80mm - margens laterais */
+    margin: 0 auto;
+    padding: 4mm 2mm;
+    color: #000;
+    background: #fff;
+    line-height: 1.4;
 }
 .cp-c { text-align: center; }
-.cp-l { border-top: 1px dashed #000; margin: 6px 0; }
-.cp-r { display: flex; justify-content: space-between; }
+.cp-l { border-top: 1px dashed #000; margin: 3mm 0; }
+.cp-r { display: flex; justify-content: space-between; gap: 4px; }
+.cp-r span:last-child { white-space: nowrap; text-align: right; }
 .cp-b { font-weight: bold; }
-.cp-t { font-size: 15px; font-weight: bold; }
+.cp-t { font-size: 13px; font-weight: bold; margin-top: 2mm; }
+.cp-sm { font-size: 9px; }
 
 ::-webkit-scrollbar { width: 4px; height: 4px; }
 ::-webkit-scrollbar-track { background: transparent; }
@@ -1223,25 +1257,31 @@ function gerarCupom() {
     const clienteNome = document.getElementById('cliente-sel').options[document.getElementById('cliente-sel').selectedIndex]?.text || '';
 
     document.getElementById('cupom-print').innerHTML = `
-    <div class="cp-c cp-b" style="font-size:14px">${cfg.nome || 'Zion Lisboa'}</div>
-    ${cfg.morada ? `<div class="cp-c" style="font-size:10px">${cfg.morada}</div>` : ''}
-    ${cfg.nif    ? `<div class="cp-c" style="font-size:10px">NIF: ${cfg.nif}</div>` : ''}
-    <div class="cp-c" style="font-size:10px">${dStr}</div>
-    ${cfg.operador ? `<div class="cp-c" style="font-size:10px">Operador: ${cfg.operador}</div>` : ''}
+    <div class="cp-c cp-b" style="font-size:13px;letter-spacing:2px">${(cfg.nome || 'Zion Lisboa').toUpperCase()}</div>
+    ${cfg.morada ? `<div class="cp-c cp-sm">${cfg.morada}</div>` : ''}
+    ${cfg.nif    ? `<div class="cp-c cp-sm">NIF: ${cfg.nif}</div>` : ''}
+    ${cfg.telefone ? `<div class="cp-c cp-sm">Tel: ${cfg.telefone}</div>` : ''}
     <div class="cp-l"></div>
+    <div class="cp-r cp-sm"><span>${dStr}</span>${cfg.operador ? `<span>Op: ${cfg.operador}</span>` : ''}</div>
+    <div class="cp-l"></div>
+    <div class="cp-r cp-b cp-sm"><span>PRODUTO</span><span>TOTAL</span></div>
+    <div style="margin:1mm 0"></div>
     ${itens.map(i => `
-        <div class="cp-r"><span>${i.prod.nome.substring(0,22)}</span><span></span></div>
-        <div class="cp-r"><span style="padding-left:8px">${i.qtd}x € ${i.preco.toFixed(2)}</span><span>€ ${(i.preco*i.qtd).toFixed(2)}</span></div>
+        <div class="cp-r"><span style="flex:1;padding-right:4px;word-break:break-word">${i.prod.nome.substring(0,28)}</span><span style="white-space:nowrap">€${(i.preco*i.qtd).toFixed(2)}</span></div>
+        <div class="cp-sm" style="padding-left:3mm;color:#555">${i.qtd} un × €${i.preco.toFixed(2)}</div>
     `).join('')}
     <div class="cp-l"></div>
-    <div class="cp-r"><span>Subtotal</span><span>€ ${sub.toFixed(2)}</span></div>
-    ${desc > 0 ? `<div class="cp-r"><span>Desconto</span><span>- € ${desc.toFixed(2)}</span></div>` : ''}
-    <div class="cp-r cp-t"><span>TOTAL</span><span>€ ${total.toFixed(2)}</span></div>
-    <div class="cp-r" style="font-size:10px"><span>Pagamento</span><span>${pagLabel[pagTipo]||pagTipo}</span></div>
-    ${clienteNome && !clienteNome.includes('sem identificação') ? `<div class="cp-r" style="font-size:10px"><span>Cliente</span><span>${clienteNome.substring(0,20)}</span></div>` : ''}
+    <div class="cp-r"><span>Subtotal</span><span>€${sub.toFixed(2)}</span></div>
+    ${desc > 0 ? `<div class="cp-r"><span>Desconto</span><span>-€${desc.toFixed(2)}</span></div>` : ''}
     <div class="cp-l"></div>
-    <div class="cp-c" style="font-size:10px;line-height:1.6">${cfg.rodape || 'Obrigado pela visita!'}</div>
-    ${cfg.website ? `<div class="cp-c" style="font-size:10px">${cfg.website}</div>` : ''}`;
+    <div class="cp-r cp-t"><span>TOTAL</span><span>€${total.toFixed(2)}</span></div>
+    <div class="cp-l"></div>
+    <div class="cp-r cp-sm"><span>Pagamento</span><span>${pagLabel[pagTipo]||pagTipo}</span></div>
+    ${clienteNome && !clienteNome.includes('sem identificação') ? `<div class="cp-r cp-sm"><span>Cliente</span><span>${clienteNome.substring(0,20)}</span></div>` : ''}
+    <div class="cp-l"></div>
+    <div class="cp-c" style="font-size:10px;line-height:1.6;margin-top:1mm">${cfg.rodape || 'Obrigado pela visita!'}</div>
+    ${cfg.website ? `<div class="cp-c cp-sm">${cfg.website}</div>` : ''}
+    <div style="margin-top:6mm"></div>`;
 }
 
 function imprimirCupom() { gerarCupom(); setTimeout(() => window.print(), 100); }
