--- a/admin.html
+++ b/admin.html
@@ -1133,25 +1133,41 @@
     function buildImageUpload(key, label, currentUrl, bucket) {
         const hasImg = !!currentUrl;
         const imgHtml = hasImg
-            ? `<img class="img-upload-preview" src="${currentUrl}" alt="${label}" onerror="this.style.display='none'">`
-            : `<div class="img-upload-placeholder"><div class="img-upload-placeholder-icon">+</div><div class="img-upload-placeholder-txt">Clica para escolher imagem</div></div>`;
-        return `<div class="form-group img-upload-wrap">
+            ? `<img src="${currentUrl}" alt="${label}"
+                 style="max-width:100%;max-height:100%;object-fit:contain;display:block;border-radius:6px"
+                 onerror="this.parentElement.innerHTML='<div style=\'display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;gap:6px;color:var(--text-faint)\'><svg width=32 height=32 fill=none stroke=currentColor stroke-width=1.5 viewBox=\'0 0 24 24\'><rect x=3 y=3 width=18 height=18 rx=2/><circle cx=8.5 cy=8.5 r=1.5/><polyline points=\'21,15 16,10 5,21\'/></svg><div style=\'font-size:11px\'>Imagem inválida ou em falta</div></div>'">`
+            : `<div style="display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;gap:10px;color:var(--text-faint)">
+                <svg width="36" height="36" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21,15 16,10 5,21"/></svg>
+                <div style="font-size:12px;text-align:center;padding:0 12px;font-weight:600">Clica para escolher imagem</div>
+                <div style="font-size:11px;color:var(--text-faint)">JPG, PNG, WEBP · máx 5 MB</div>
+               </div>`;
+        return `<div class="form-group img-upload-wrap" style="grid-column:1/-1">
         <label class="form-label">${label}</label>
-        <div class="img-upload-box ${hasImg?'has-img':''}" id="img-box-${key}" onclick="triggerFileInput('${key}')">
+        <div id="img-box-${key}" onclick="triggerFileInput('${key}')"
+             style="width:100%;height:240px;border:2px dashed var(--border);border-radius:12px;
+                    background:var(--bg-input);cursor:pointer;overflow:hidden;position:relative;
+                    transition:border-color 0.2s,background 0.2s;
+                    display:flex;align-items:center;justify-content:center"
+             onmouseover="this.style.borderColor='var(--primary)';this.style.background='var(--primary-faint)'"
+             onmouseout="this.style.borderColor='var(--border)';this.style.background='var(--bg-input)'">
             ${imgHtml}
         </div>
-        <div class="img-upload-progress" id="img-prog-${key}">
-            <div class="img-upload-progress-bar" id="img-prog-bar-${key}"></div>
+        <div id="img-prog-${key}" style="height:3px;background:var(--border);border-radius:2px;margin-top:6px;overflow:hidden;display:none">
+            <div id="img-prog-bar-${key}" style="height:100%;width:0%;background:var(--primary);transition:width 0.3s;border-radius:2px"></div>
         </div>
-        <div class="img-upload-status" id="img-status-${key}"></div>
-        <div class="img-upload-actions">
-            <button type="button" class="img-upload-btn" onclick="triggerFileInput('${key}')">Ficheiro</button>
-            <button type="button" class="img-upload-btn" onclick="triggerCamera('${key}')">Câmara</button>
-            ${currentUrl?`<button type="button" class="img-upload-btn danger" onclick="removeImage('${key}','f_${key}')">Remover</button>`:''}
+        <div id="img-status-${key}" style="font-size:11px;margin-top:4px;min-height:16px"></div>
+        <div style="display:flex;gap:6px;margin-top:8px;flex-wrap:wrap">
+            <button type="button" class="img-upload-btn" onclick="event.stopPropagation();triggerFileInput('${key}')">Ficheiro</button>
+            <button type="button" class="img-upload-btn" onclick="event.stopPropagation();triggerCamera('${key}')">Câmara</button>
+            ${currentUrl ? `<button type="button" class="img-upload-btn danger" onclick="event.stopPropagation();removeImage('${key}','f_${key}')">Remover</button>` : ''}
         </div>
-        <div class="img-upload-url">
-            <input type="text" id="img-url-input-${key}" placeholder="Ou cola um URL..." value="${currentUrl||''}">
-            <button type="button" class="img-upload-btn" onclick="applyUrlInput('${key}')">Usar URL</button>
+        <div style="display:flex;gap:6px;margin-top:6px">
+            <input type="text" id="img-url-input-${key}" placeholder="Ou cola um URL aqui..."
+                   value="${currentUrl||''}"
+                   style="flex:1;background:var(--bg-input);border:1px solid var(--border);border-radius:7px;
+                          padding:7px 10px;font-size:12px;font-family:var(--font-body);color:var(--text-main);outline:none"
+                   onclick="event.stopPropagation()">
+            <button type="button" class="img-upload-btn" onclick="event.stopPropagation();applyUrlInput('${key}')">Usar URL</button>
         </div>
         <input type="hidden" id="f_${key}" value="${currentUrl||''}">
         <input type="file" id="img-file-${key}" accept="image/*" style="display:none" onchange="handleFileSelect('${key}','${bucket}',this)">
@@ -1168,23 +1184,39 @@
         setImgStatus(key,'URL aplicado.','ok');
     }
     function removeImage(key, hiddenId) {
-        document.getElementById(hiddenId).value='';
-        document.getElementById('img-url-input-'+key).value='';
-        const box = document.getElementById('img-box-'+key);
-        box.innerHTML=`<div class="img-upload-placeholder"><div class="img-upload-placeholder-icon">+</div><div class="img-upload-placeholder-txt">Clica para escolher imagem</div></div>`;
-        box.classList.remove('has-img');
-        setImgStatus(key,'','');
+        document.getElementById(hiddenId).value = '';
+        const urlInput = document.getElementById('img-url-input-' + key);
+        if (urlInput) urlInput.value = '';
+        const box = document.getElementById('img-box-' + key);
+        if (!box) return;
+        box.style.borderColor = 'var(--border)';
+        box.style.background  = 'var(--bg-input)';
+        box.innerHTML = `<div style="display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;gap:10px;color:var(--text-faint)">
+            <svg width="36" height="36" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21,15 16,10 5,21"/></svg>
+            <div style="font-size:12px;text-align:center;padding:0 12px;font-weight:600">Clica para escolher imagem</div>
+            <div style="font-size:11px;color:var(--text-faint)">JPG, PNG, WEBP · máx 5 MB</div>
+        </div>`;
+        setImgStatus(key, 'Imagem removida.', '');
+        setTimeout(() => setImgStatus(key, '', ''), 2000);
     }
     function updateImagePreview(key, url) {
-        const box = document.getElementById('img-box-'+key);
+        const box = document.getElementById('img-box-' + key);
         if (!box) return;
-        box.classList.add('has-img');
-        box.innerHTML=`<img class="img-upload-preview" src="${url}" alt="preview" onerror="this.parentElement.classList.remove('has-img');this.style.display='none'">`;
+        box.style.background = 'var(--bg-input)';
+        box.style.borderColor = 'var(--primary)';
+        box.innerHTML = `<img src="${url}" alt="preview"
+            style="max-width:100%;max-height:100%;object-fit:contain;display:block;border-radius:6px"
+            onerror="this.parentElement.innerHTML='<div style=\'display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;gap:6px;color:var(--text-faint)\'><svg width=28 height=28 fill=none stroke=currentColor stroke-width=2 viewBox=\'0 0 24 24\'><circle cx=12 cy=12 r=10/><line x1=12 y1=8 x2=12 y2=12/><line x1=12 y1=16 x2=12.01 y2=16/></svg><div style=\'font-size:11px\'>Erro ao carregar imagem</div></div>'">`
     }
     function setImgStatus(key, msg, tipo) {
-        const el = document.getElementById('img-status-'+key);
+        const el = document.getElementById('img-status-' + key);
         if (!el) return;
-        el.textContent=msg; el.className='img-upload-status'+(tipo?' '+tipo:'');
+        el.textContent = msg;
+        el.style.fontWeight = tipo ? '600' : 'normal';
+        el.style.color = tipo === 'ok' ? 'var(--green)' : tipo === 'err' ? 'var(--red)' : 'var(--text-faint)';
+        // Mostrar/ocultar barra de progresso
+        const prog = document.getElementById('img-prog-' + key);
+        if (prog) prog.style.display = (msg && tipo !== 'ok' && tipo !== 'err') ? 'block' : 'none';
     }
     function resizeImage(file, maxW=800, maxH=800, quality=0.82) {
         return new Promise(resolve => {
@@ -1206,43 +1238,64 @@
     async function handleFileSelect(key, bucket, input) {
         const file = input.files?.[0];
         if (!file) return;
+        // Preview local imediato
         updateImagePreview(key, URL.createObjectURL(file));
-        setImgStatus(key,'A comprimir...','');
-        const prog=document.getElementById('img-prog-'+key);
-        const bar =document.getElementById('img-prog-bar-'+key);
+        setImgStatus(key, 'A comprimir...', '');
+        const prog = document.getElementById('img-prog-' + key);
+        const bar  = document.getElementById('img-prog-bar-' + key);
         if (prog) prog.classList.add('active');
-        if (bar)  bar.style.width='20%';
+        if (bar)  bar.style.width = '20%';
         try {
+            // 1. Comprime
             const blob     = await resizeImage(file);
-            const filename = `${Date.now()}-${Math.random().toString(36).slice(2)}.jpg`;
-            const path     = `${secaoAtiva}/${filename}`;
-            setImgStatus(key,'A fazer upload...','');
-            if (bar) bar.style.width='50%';
-            const formData = new FormData();
-            formData.append('file', new File([blob], filename, {type:'image/jpeg'}));
-            formData.append('path', path);
-            formData.append('bucket', bucket);
-            const res = await fetch('/api/upload', {
-                method:'POST',
-                headers:{'Authorization':`Bearer ${currentUser?.token||''}`},
-                body:formData,
+            const filename = `${secaoAtiva}/${Date.now()}-${Math.random().toString(36).slice(2)}.jpg`;
+            setImgStatus(key, 'A fazer upload... aguarda', '');
+            if (bar) bar.style.width = '50%';
+            // Overlay de loading no box
+            const boxEl = document.getElementById('img-box-' + key);
+            if (boxEl) {
+                boxEl.style.borderColor = 'var(--primary)';
+                const overlay = document.createElement('div');
+                overlay.id = 'upload-overlay-' + key;
+                overlay.style.cssText = 'position:absolute;inset:0;background:rgba(0,144,152,0.12);display:flex;align-items:center;justify-content:center;border-radius:10px;z-index:2;backdrop-filter:blur(2px)';
+                overlay.innerHTML = '<div style="font-family:var(--font-title);font-size:10px;letter-spacing:2px;color:var(--primary-dark);text-align:center">A FAZER UPLOAD...</div>';
+                boxEl.style.position = 'relative';
+                boxEl.appendChild(overlay);
+            }
+
+            // 2. Upload directo ao Supabase Storage (sem servidor intermédio)
+            const uploadUrl = `${SUPA_URL}/storage/v1/object/${bucket}/${filename}`;
+            const res = await fetch(uploadUrl, {
+                method:  'POST',
+                headers: {
+                    'apikey':        SUPA_KEY,
+                    'Authorization': `Bearer ${SUPA_KEY}`,
+                    'Content-Type':  'image/jpeg',
+                    'x-upsert':      'true',
+                },
+                body: blob,
             });
             if (!res.ok) {
-                const err = await res.json().catch(()=>({}));
-                throw new Error(err?.error||err?.message||`Erro ${res.status}`);
+                const err = await res.json().catch(() => ({}));
+                throw new Error(err?.error || err?.message || `Erro ${res.status}: verifique se o bucket "${bucket}" existe e é público no Supabase`);
             }
-            const data = await res.json();
-            if (bar) bar.style.width='100%';
-            document.getElementById('f_'+key).value = data.url;
-            document.getElementById('img-url-input-'+key).value = data.url;
-            updateImagePreview(key, data.url);
-            setImgStatus(key,`Upload concluído! (${Math.round(blob.size/1024)} KB)`,'ok');
+            if (bar) bar.style.width = '100%';
+            // Remove overlay
+            document.getElementById('upload-overlay-' + key)?.remove();
+
+            // 3. URL pública
+            const publicUrl = `${SUPA_URL}/storage/v1/object/public/${bucket}/${filename}`;
+            document.getElementById('f_' + key).value             = publicUrl;
+            document.getElementById('img-url-input-' + key).value = publicUrl;
+            updateImagePreview(key, publicUrl);
+            setImgStatus(key, `Upload concluído! (${Math.round(blob.size / 1024)} KB)`, 'ok');
         } catch(e) {
-            setImgStatus(key,'Erro: '+e.message,'err');
+            document.getElementById('upload-overlay-' + key)?.remove();
+            setImgStatus(key, 'Erro: ' + e.message, 'err');
             console.error('Upload error:', e);
         } finally {
-            setTimeout(()=>{ if(prog) prog.classList.remove('active'); if(bar) bar.style.width='0%'; }, 2000);
-            input.value='';
+            setTimeout(() => { if (prog) prog.classList.remove('active'); if (bar) bar.style.width = '0%'; }, 2500);
+            input.value = '';
         }
     }
 
