--- a/admin.html
+++ b/admin.html
@@ -3939,7 +3939,7 @@
                 } catch(permErr) {
                     const msg = permErr?.message || JSON.stringify(permErr);
                     if (msg.includes('column') || msg.includes('schema cache')) {
-                        showFormMsg('⚠ Dados base guardados. Permissões ainda não disponíveis — executa o SQL permissoes_keola.sql no Supabase e depois faz NOTIFY pgrst, 'reload schema';', 'error');
+                        showFormMsg('⚠ Dados base guardados. Permissões ainda não disponíveis — executa o SQL permissoes_keola.sql no Supabase e depois NOTIFY pgrst reload schema', 'error');
                         utilizadoresData = await sb('usuarios?select=*&order=nome') || [];
                         btn.disabled = false; btn.textContent = 'Guardar';
                         return;
