--- a/pdv.html
+++ b/pdv.html
@@ -966,20 +966,23 @@ function setAba(aba) {
 async function carregarTudo() {
     const [loja, keola, mbs] = await Promise.all([
         sb('loja_produtos?select=*&ativo=eq.true&order=categoria,nome').catch(() => []),
-        sb('keola_menu?select=*&disponivel=eq.true&order=ordem.asc,nome.asc').catch(() => []),
+        sb('keola_menu?select=*&disponivel=eq.true&mostrar_pdv=eq.true&order=ordem.asc,nome.asc').catch(() => []),
         sb('membros?select=id,nome&ativo=eq.true&order=nome').catch(() => []),
     ]);
 
     lojaProds  = (loja  || []);
-    keolaProds = (keola || []).map(k => ({
-        ...k,
-        _keola: true,
-        stock:          null,     // Keola não tem controlo de estoque físico
-        controlar_estoque: false,
-        imagem_url:     k.imagem_url || k.foto_url || null,
-        sku:            k.sku || null,
-        codigo_barras:  null,
-    }));
+    keolaProds = (keola || [])
+        .filter(k => k.tipo_item !== 'componente')  // componentes nunca aparecem no PDV
+        .map(k => ({
+            ...k,
+            _keola: true,
+            // Stock: kits usam stock_kits, items de venda usam stock
+            stock: k.tipo_item === 'kit' ? (k.stock_kits ?? null) : (k.stock ?? null),
+            controlar_estoque: k.tipo_item !== 'kit' ? (k.stock != null) : (k.stock_kits != null),
+            imagem_url:    k.imagem_url || k.foto_url || null,
+            sku:           k.sku || null,
+            codigo_barras: null,
+        }));
     membros = mbs || [];
 
     const sel = document.getElementById('cliente-sel');
